createIndexes provides incorrect IndexBuildProtocol for two phase index builds

XMLWordPrintableJSON

    • Type: Bug
    • Resolution: Fixed
    • Priority: Major - P3
    • 4.3.1
    • Affects Version/s: None
    • Component/s: Storage
    • None
    • Fully Compatible
    • ALL
    • Execution Team 2019-10-21, Execution Team 2019-11-04
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      The createIndexes command is currently passing IndexBuildProtocol::kSinglePhase to the IndexBuildsCoordinator when starting index builds. This is currently not an issue for index builds on the primary but will result in unexpected behavior if index builds are allowed to survive stepdowns. We would not get the blocking behavior added in SERVER-39239 for secondary index builds.

            Assignee:
            Benety Goh
            Reporter:
            Benety Goh
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:
              Resolved: