SERVER-44122 createIndexes should pass IndexBuildProtocol::kTwoPhase to IndexBuildsCoordinator if supported